# types-statresult

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: bump.yml  release.yml  tox.yml
tests/: test_statresult.py
types_statresult/: __init__.py  __main__.py  statresult.py
