[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "types-statresult"
version = "0.1.0"
description = "creates type stubs for os.stat_result"
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
repository = "https://github.com/d-chris/types-statresult"

[tool.poetry.dependencies]
python = "^3.14"
mypy = ">=1.18.2"
astor = ">=0.8.1"
black = ">=25.9.0"
