[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "types-statresult"
version = "0.1.1"
description = "creates type stubs for os.stat_result"
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
repository = "https://github.com/d-chris/types-statresult"

[tool.poetry.dependencies]
python = "^3.10"
mypy = ">=1.18.2"
astor = ">=0.8.1"
black = ">=25.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-randomly = "^4.0.1"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [
  "--color=yes",
  "-s",
  "--cov=types_statresult",
  "--cov-report=term-missing",
]

[tool.coverage.run]
omit = [ "tests/*" ]

[tool.coverage.report]
exclude_lines = [
  "^def normalize_url",
]
